# gigaevo-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  README_memory.md  README_memory_platform_run.md  airi.html  article.txt  benchmark_survey.md  helper.py  launch_bus_smoke.sh  launch_vartodd.sh  pyproject.toml  pyrightconfig.json  pytest.ini  readme_mem  run.py  run_hydra.py  verify_setup.py  описание_проекта.txt
.github/workflows/: build.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: cli-metrics-manifest-wiring.md  frontier-metrics-stale-arm-a.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
benchmarks/: bench_lpt.py  bench_multirun.py  bench_steady_state.py  calibration_data.json
config/: config.yaml  constants.yaml  ideas_tracker.yaml  memory.yaml  memory_backend.yaml
config/aggregator/: heilbron_constructor.yaml  heilbron_improver.yaml  none.yaml
config/algorithm/: _base.yaml  single_island.yaml  single_island_2d.yaml  single_island_2d_d.yaml  single_island_2d_design_b.yaml  single_island_2d_g.yaml  topology_3d.yaml  topology_3d_7step.yaml  topology_3d_ret.yaml
config/constants/: endpoints.yaml  evolution.yaml  llm.yaml  logging.yaml  pipeline.yaml  redis.yaml  runner.yaml
config/evolution/: default.yaml  steady_state.yaml
config/experiment/: base.yaml  full_featured.yaml  full_sella_diff.yaml  heilbron.yaml  migration_bus.yaml  multi_island_complexity.yaml  multi_llm_exploration.yaml  prompt_coevolution.yaml  steady_state.yaml  steady_state_adversarial.yaml  steady_state_bus.yaml
config/ideas_tracker/: default.yaml  fast.yaml  none.yaml  true.yaml
config/llm/: gemini25_pro.yaml  gemini31_pro.yaml  gemini35_flash.yaml  gemini3_flash.yaml  heterogeneous.yaml  opencode_deepseek_v4_pro.yaml  qwen_235b.yaml  single.yaml  (+1 more)
custom/: __init__.py  additional_stages.py  metrics_formatter.py  vartodd_aux_formatter.py
data/: TOHPE.py  baseline.py  greedy.py
docs/: ARCHITECTURE.md  COEVOLUTION.md  CONTRIBUTING.md  DAG_SYSTEM.md  EVOLUTION_STRATEGIES.md  INTRA_EXTRA_MEMORY.md  MEMORY_ARCHITECTURE.md  OPTUNA_OPTIMIZATION.md  QUICKSTART.md  USAGE.md  adversarial_coevo_literature_review.md  adversarial_coevolution.md  autonomy-stack-guide.md  gan_techniques_survey.md  llm_load_balancer.md  lpt_scheduling.md  memory.md  migration_bus.md  pre-experiment-protocol.md  redis_schema.md  steady_state_engine.md
evo_memory_agent/: README.md  amem_gam_retriever.py  config.py  ideas_for_memory.py  memory.py  memory_read_example.py  memory_usage_example.py  memory_write_example.py  memory_write_musique_example.py
evo_memory_agent/GAM_root/: pyproject.toml
evo_memory_agent/GAM_root/eval/: narrativeqa_test.py  ruler_test.py
evo_memory_agent/GAM_root/gam/: __init__.py
evo_memory_agent/GAM_root/gam/agents/: research_agent.py
evo_memory_agent/GAM_root/gam/generator/: vllm_generator.py
evo_memory_agent/GAM_root/gam/prompts/: research_prompts.py
evo_memory_agent/GAM_root/gam/retriever/: __init__.py  chroma_retriever.py
evo_memory_agent/GAM_root/gam/schemas/: __init__.py
evo_memory_agent/GAM_root/scripts/: eval_hotpotqa.sh
evo_memory_agent_api/: README.md  config.py  config.yaml  memory_read_example.py  memory_write_example.py  runtime_config.py
gf2lib/: gf2lib.pyi
gigaevo/: __init__.py  exceptions.py
memory/: extract_best.py
plans/: cli-paper-polish.md  experiment-skills-redesign.md  memory-system-quality-boost.md  opponent-result-provider-abstraction.md  research-autonomy-stack.md
snapshots/: after_batch_discard.json  after_collector_analytics.json  after_elite_cache.json  after_ingest_exclude.json  baseline.json
tests/: conftest.py  test_amem_gam_memory.py  test_card_update_dedup_extended.py  test_concept_api_client.py  test_config.py  test_dag_complex_integration.py  test_data_components.py  test_elite_selectors.py  test_evolution_engine.py  test_heilbron_per_opp_metrics.py  test_memory_api_search.py  test_memory_bugs_chaoshacker.py  test_memory_card_update_dedup.py  test_memory_contracts.py  test_memory_cycle5.py  test_memory_deeper.py  test_memory_e2e_scenarios.py  test_memory_engine_interaction.py  test_memory_full_agentic.py  test_memory_integration.py  test_memory_known_bugs.py  test_memory_models.py  test_memory_operator_integration.py  test_memory_public_api.py  test_memory_with_fake_agentic.py  test_memory_write_example_extended.py  test_memory_write_program_cards.py  test_metrics_aggregators.py  test_metrics_collector.py  test_metrics_formatter.py  test_metrics_frontier_mutations.py  test_metrics_tracker.py  test_normalize_memory_card.py  test_openai_inference.py  test_optuna_optimization.py  test_program.py  test_pydantic_cards.py  test_redis_storage.py  test_round2_counterfactual.py  test_round3_counterfactual.py  (+4 more)
tools/: README.md  analyze_test_results.py  archive_run.sh  check_docs_freshness.py  check_experiment_complete.sh  check_phase_order.sh  comparison.py  evolution_fitness_analyzer.py  extract_ideas.py  extract_top_programs.py  fitness_vs_time.py  flush.py  hourly_run_report.py  lineage.py  litellm_monitor.py  litellm_monitor_cron.sh  litellm_monitor_loop.sh  litellm_sampler_loop.sh  litellm_token_logger.py  map_elites_grid_plot.py  memory_excellent_card_ensemble.py  memory_excellent_card_ensemble_retry.py  memory_quality_audit.py  mutation_prompt_context_leak_fix_ensemble.py  mutation_prompt_evolution_quality_ensemble.py  mutation_prompt_final_check_ensemble.py  mutation_prompt_polish_ensemble.py  mutation_prompt_sota_final_ensemble.py  mutation_prompt_sota_gemini_retry.py  no_proxy.py  pareto_plot.py  profiler.py  redis2pd.py  resource_manager.py  run_eval.sh  sella_energy_fitness_plot.py  status.py  telegram_notify.py  throughput_plot.py  top_programs.py  (+4 more)
visualisation/: viz_pipeline.py
visualisation_sc/: viz_pipeline.py
(+1627 files in other folders)
