[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gigaevo"
version = "2.3.1"
description = "Advanced evolutionary computation framework with MAP-Elites and DAG-based program execution"
authors = [
    {name = "GigaEvo Team", email = "team@gigaevo.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    # Storage / orchestration
    "redis>=4.5.0",
    "fakeredis[lua]>=2.19.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    # Math / data (engine eager paths)
    "numpy>=2.0.0",
    "scipy",
    "pandas==2.2.2",
    "scikit-learn>=1.3.2",
    "networkx",
    # Validation + logging
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    # System glue
    "orjson",
    "httpx>=0.27.0",
    "requests",
    "PyYAML>=6.0",
    "ruamel.yaml>=0.18",
    "python-dotenv",
    "click",
    "cloudpickle",
    "tqdm>=4.65.0",
    "diffpatch",
    "jinja2",
    # LLM stack (engine entry points hard-import these)
    "openai>=1.0.0",
    "litellm>=1.16.11",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "langfuse>=4.0.0,<5",
    # Live profiler (run.py imports start_live_profiler unconditionally)
    # and default tensorboard logging tracker — required for the basic
    # `python run.py problem.name=heilbron` smoke path on a minimal install.
    "plotly>=5.0",
    "tensorboardX",
]

[project.optional-dependencies]
# Chain/prompt problem families (HoVer, HotpotQA, IFBench, gsm8k, musique,
# papillon, pupa) + vendored memory backends (A_mem, GAM_root).
chains = [
    "transformers>=4.36.2",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.22",
    "nltk>=3.8.1",
    "bm25s>=0.3.0",
    "PyStemmer>=3.0.0",
    "datasets",
    "tenacity",
    "absl-py",
    "emoji",
    "syllapy",
    "langdetect",
    "immutabledict",
    # mmar-carl wheels require Python >=3.12; gated so CI on 3.11 can install [chains].
    # Tests that import mmar_carl use pytest.importorskip to skip when unavailable.
    "mmar-carl==0.2.0; python_version >= '3.12'",
]

# Optimization stages (Optuna/CMA) + JAX/Optax + symbolic/geometric problems
# (alphaevolve, hexagon_improver, santa2025).
optimization = [
    "optuna",
    "cma",
    "jax",
    "optax",
    "sympy",
    "shapely",
]

# CLI plotting commands + monitoring dashboards.
# Required for: `gigaevo plot`, `gigaevo events`. (plotly is in core for the
# flow profiler imported by run.py; matplotlib/seaborn/statsmodels stay opt-in.)
plotting = [
    "matplotlib",
    "seaborn",
    "statsmodels",
]

# Experiment tracking backends — opt-in by trackers config.
# (tensorboardX moved to core: default `/logging: tensorboard` requires it.)
tracking = [
    "wandb",
]

# Heavy GPU / local-LLM stack — required only by problems/prompts/sudoku
# local_runtime.
local-llm = [
    "torch",
    "vllm",
]

# GAM memory platform API client — opt-in when running with `use_api=True`
# on the memory backend. Default backend is the local in-process variant
# (does not require this extra).
# gigaevo-memory wheels require Python >=3.12; gated so CI on 3.11 can install
# [memory-platform] without resolution failure. The single test that imports
# `gigaevo_memory` uses pytest.importorskip; production use_api=True paths
# import gigaevo.memory_platform lazily so a 3.11 runtime never sees it
# unless the user opts in.
memory-platform = [
    "gigaevo-memory; python_version >= '3.12'",
]

dev = [
    "pre-commit",
    "python-semantic-release",
    "ruff",
    "mypy>=1.10",
    "types-PyYAML",
    "types-redis",
    "types-psutil",
    "uvicorn",  # tools/dag_builder/{run,api}.py
]

test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.4",
    "fakeredis[lua]>=2.19.0",
    "hypothesis>=6.0",
]

# Convenience meta-extra — everything user-facing.
all = [
    "gigaevo[chains,optimization,plotting,tracking,local-llm,memory-platform]",
]

[project.scripts]
gigaevo = "gigaevo.cli:main"

[project.urls]
Repository = "https://github.com/gigaevo/gigaevo"
Documentation = "https://gigaevo.readthedocs.io"
Issues = "https://github.com/gigaevo/gigaevo/issues"
Changelog = "https://github.com/gigaevo/gigaevo/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["gigaevo*"]

[tool.ruff]
line-length = 88  # same as in black
target-version = "py311"
exclude = [".claude/worktrees", "experiments/*/top_programs_*", "gigaevo/memory/_vendor/A_mem/", "gigaevo/memory/_vendor/GAM_root/"]

[tool.ruff.lint]
# Enable pycodestyle (`E`), Pyflakes (`F`), and isort (`I`) codes
# See https://beta.ruff.rs/docs/rules/ for more possible rules
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # Ignore line-too-long (handled by ruff-format)

[tool.ruff.lint.per-file-ignores]
"run.py" = ["E402"]
"run_hydra.py" = ["E402"]
"tools/**/*.py" = ["E402"]
"__init__.py" = ["F401"]
"problems/**/*.py" = ["E402", "E722", "E741", "F841"]
"gigaevo/memory/ideas_tracker/run_ideas_tracker_from_csv.py" = ["E402"]
"gigaevo/memory/examples/a_mem_memory_creation.py" = ["E402"]
"gigaevo/memory/shared_memory/amem_gam_retriever.py" = ["E402"]
"gigaevo/memory/shared_memory/memory.py" = ["E402"]
"gigaevo/memory/examples/memory_usage_example.py" = ["E402"]
"gigaevo/memory_platform/shared_memory/memory.py" = ["E402"]
"gigaevo/memory_platform/shared_memory/remote_gam_retriever.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["gigaevo"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
strict_optional = true
no_implicit_optional = true
warn_no_return = true
exclude = ["build/", "dist/", "gigaevo/memory/_vendor/A_mem/", "gigaevo/memory/_vendor/GAM_root/", "gigaevo/memory/examples/"]

[[tool.mypy.overrides]]
module = [
    # Core deps (always installed)
    "loguru.*",
    "numpy.*",
    "pandas.*",
    "hydra.*",
    "omegaconf.*",
    "sklearn.*",
    "tqdm.*",
    "networkx.*",
    "scipy.*",
    "cloudpickle.*",
    "litellm.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langgraph.*",
    "langfuse.*",
    "orjson.*",
    "diffpatch.*",
    "dotenv.*",
    "jinja2.*",
    "fakeredis.*",
    "gigaevo_memory.*",
    # [chains] extra
    "chromadb.*",
    "sentence_transformers.*",
    "transformers.*",
    "nltk.*",
    "bm25s.*",
    "Stemmer.*",
    "datasets.*",
    "tenacity.*",
    "absl.*",
    "emoji.*",
    "syllapy.*",
    "langdetect.*",
    "immutabledict.*",
    "mmar_carl.*",
    "GAM_root.*",
    "A_mem.*",
    "shared_memory.*",
    "runtime_config.*",
    # [optimization] extra
    "optuna.*",
    "cma.*",
    "jax.*",
    "optax.*",
    "sympy.*",
    "shapely.*",
    # [plotting] extra
    "matplotlib.*",
    "seaborn.*",
    "statsmodels.*",
    "plotly.*",
    # [tracking] extra
    "wandb.*",
    "tensorboardX.*",
    # [local-llm] extra
    "torch.*",
    "vllm.*",
    # [dev] extra
    "uvicorn.*",
]
ignore_missing_imports = true

[tool.semantic_release]
version_variables = ["gigaevo/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
other_allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "style",
    "refactor",
    "test",
]

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.coverage.run]
source = ["gigaevo"]
branch = true
omit = [
    "tests/*",
    "gigaevo/*/__pycache__/*",
    "*/conftest.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "@abstractmethod",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
